<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m button!</string>
    <string name="StartChartButton">Start Chart</string>
    <string name="StartChartText">editText</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_items">ListItemsActivity</string>
    <string name="login_name">Login Name</string>
    <string name="password">Password</string>
    <string name="Password">.......</string>

    <string name="SendButton">Send</string>

    <string name="enable_something">Enable Something</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="login_button">Login Button</string>
    <string name="dialog_message">Message...</string>
    <string name="dialog_title">MessageTitle</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edittext">EditText</string>
    <string name="textview">TextView</string>
    <string name="textview1">New Text</string>


</resources>
