<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jie.androidlabs.StartActivity"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:id="@+id/textView" />

    <Button
        android:text="@string/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="48dp"
        android:id="@+id/startbutton"
        android:onClick="buttonClick" />

    <Button
        android:text="@string/StartChartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/StartChartButton"
        android:layout_below="@+id/startbutton"
        android:layout_alignStart="@+id/startbutton"
        android:layout_marginTop="49dp" />
    />
</RelativeLayout>
