<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jie.androidlabs.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical">

    <TextView
        android:text="@string/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="Login"
        tools:ignore="Suspicious0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification.Media"
        tools:textSize="36sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText_LonginName"
        android:hint="@string/login_name"
        android:textSize="24sp"
        android:inputType="textEmailAddress" />

    <TextView
        android:text="Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_password"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_Password"
        tools:ignore="LabelFor"
        android:text="@string/Password" />

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Login_button" />
</LinearLayout>
